# liblzhl

./: CMakeLists.txt  CMakePresets.json  LICENSE  LZHLConfig.cmake  Lz.cpp  README.md
include/lzhl/: lzhl.h
src/: _huff.h  _lz.h  _lzhl.h  huff.cpp  lz.cpp  lzhl.cpp  lzhl.def  lzhl.map
